--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>JpngbujipWww</title>
+  <title>종부집칼국수</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- jQuery -->
+  <script src="/assets/jquery-3.3.1.min.js"></script>
+
+  <!-- Bootstrap  -->
+  <link rel="stylesheet" href="/assets/bootstrap-3.3.7/css/bootstrap.min.css">
+  <script src="/assets/bootstrap-3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
   <app-root></app-root>
